--- a/public/css/quienes-somos.css
+++ b/public/css/quienes-somos.css
@@ -1,6 +1,5 @@
 .uk-button {
     border: 1px solid #289849;
-    /* margin-right: 20px; */
     font-weight: bold;
     color: #289849;
 }
@@ -33,4 +32,19 @@
 
 .container h3 {
     color: #fff;
+}
+
+#valores {
+    margin-bottom: 100px;
+}
+
+#dondeSurge {
+    margin-bottom: 100px;
+}
+
+#tituloDondeSurge {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 2px 2px 5px #999;
 }
